<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_KQ1000_Data" Id="{318222f7-9ed5-465b-b7ba-19f9697c9ff8}">
    <Declaration><![CDATA[TYPE ST_KQ1000_Data :
STRUCT
	iRawLevel         : WORD;   // Raw Level (0–100 or 32764 = NoData)
    rLevelPercent     : REAL;   // % Level (0-100 or -1.0 para NoData)
    wStatusRaw        : WORD;   // Status complete word
    bOut1             : BOOL;   // Status OUT1
    bOut2             : BOOL;   // Status OUT2
    bOut3             : BOOL;   // Status OUT3
    iDeviceStatusCode : USINT;  // State Bits 4–7 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>